...
                            dismiss()
                        } catch {
                            self.validationError = error
                            self.showValidationErrorAlert = true
                        }
                    }
                    .accessibilityIdentifier("save")
                }
            }
        }
    }
}

...
